gcc/testsuite/objc.dg/error-1.m
/* { dg-options "-w" } */
/* { dg-do compile } */
@implementation A
+B  
+C {} /* { dg-error "expected '\{' before '\\\+' token" } */
@end
